--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,16 @@ figcaption {
 	position: relative;
 }
 
+.picturewrapper:hover figure figcaption{
+   transition: opacity .5s;
+   opacity: 1;
+}
+.picturewrapper figure{
+   opacity:0;
+}
+
+
+
 figure:nth-child(1) {
 	animation: xfade 9s 6s infinite;
 }
@@ -164,6 +174,20 @@ figure:nth-child(3) {
 	animation: xfade 9s 0s infinite;
 }
 
+.hidecontainer {
+	width: 20px;
+	display: none;
+	visibility: hidden;
+	cursor: pointer; cursor: hand;
+}
+
+.hideme {
+	font-family: "Jura";
+	:hover {
+		cursor: hand; cursor: ponter;
+	}
+
+}
 .item1 {
 	color: #336699;
 }
