--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ body {
 	border-bottom: solid silver;
 	background-color: #F5F3EE;
 	height: 100px;
-	width: 80%;
+	width: 90%;
 	position: fixed;
 	left: 50%;
-	margin-left: -40%;
+	margin-left: -45%;
 	z-index: 3;
 
 }
@@ -24,7 +24,7 @@ body {
 	color: #336699;
 	/*text-shadow: -1px 0 silver, 0 1px silver, 1px 0 silver, 0 -1px silver;*/
 	font-family: "Jura";
-	font-size: 200%;
+	font-size: 180%;
 	
 }
 
@@ -47,7 +47,7 @@ body {
 	top: 10px;
 	font-family: "Jura";
 	color: #999999;
-	font-size: 200%;
+	font-size: 180%;
 	text-align: right;
 	/*background-color: #336699;*/
 
@@ -57,7 +57,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	background-color: #999999;
-	width: 80%;
+	width: 90%;
 	height: 1200px;
 	position: relative;
 	top: 100px;
@@ -182,6 +182,7 @@ figure:nth-child(3) {
 }
 
 .hideme {
+	background-color: blue;
 	font-family: "Jura";
 	:hover {
 		cursor: hand; cursor: ponter;
